# SCNet

./: .gitignore  README.md  pyproject.toml
conf/: config_large.yaml  config_small.yaml
scnet/: SCNet.py  __init__.py  apply.py  augment.py  ema.py  inference.py  log.py  loss.py  separation.py  solver.py  train.py  utils.py  wav.py
