[project]
name = "scnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==0.32.1",
    "einops==0.6.1",
    "julius==0.2.7",
    "ml-collections==0.1.1",
    "numpy>=1.26.4",
    "pyyaml>=6.0.3",
    "soundfile==0.12.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "tqdm>=4.67.3",
]
